trace-grapher/deploy-trace-grapher/bases/neo4j/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j

spec:
  selector:
    matchLabels:
      app: neo4j
  serviceName: neo4j
  replicas: 1
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: neo4j
        image: neo4j:3.5
        imagePullPolicy: Always
        ports:
        - name: http-web
          containerPort: 7474
        - name: tcp-bolt
          containerPort: 7687
        readinessProbe:
          tcpSocket:
            port: 7687
          initialDelaySeconds: 30
          periodSeconds: 3
        livenessProbe:
          initialDelaySeconds: 60
          tcpSocket:
            port: 7687
        resources:
          requests:
            cpu: "250m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
