trace-grapher/deploy-trace-grapher/bases/neo4j/service.yml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-svc
  labels:
    app: neo4j-svc
spec:
  type: LoadBalancer
  selector:
    app: neo4j
  ports:
  - name: http-web
    port: 7474
    targetPort: 7474
  - name: tcp-bolt
    port: 7687
    targetPort: 7687
