trace-grapher/deploy-trace-grapher/bases/neo4j/virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neo4j-virtualsvc
spec:
  hosts: [ "*" ]
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /browser
    - uri:
        prefix: /db
    route:
    - destination:
        host: neo4j-svc
        port:
          number: 7474
  
  tcp:
  - match:
    - port: 7687
    route:
    - destination:
        host: neo4j-svc
        port:
          number: 7687
